huge cleaning: libraries, documentation, parameters of chromosomes, empty blast results

--- a/examples/example_03_sv_graph.Rmd
+++ b/examples/example_03_sv_graph.Rmd
@@ -1,7 +1,6 @@
 ---
 title: "Graph of TEs"
-# output: html_notebook
-output: null_document
+output: md_document
 ---
 
 This file contains a basic pipeline for creating a graph of nestedness 
